[build-system]
requires = [
    "setuptools>=68.0",
    "wheel>=0.40",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyputil"
version = "0.1.0"
description = "Python Package Utilities: Run C/C++ code, auto-install packages, generate projects, analyze dependencies, and more"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<4.0"
license = { file = "LICENSE" }

authors = [
    { name = "Moamen Walid", email = "pyputilframework@gmail.com" }
]

keywords = [
    "python", "utilities", "package-management",
    "module-tools", "c-fast", "auto-install",
    "project-template", "dependency-analyzer", "pyputil"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

dependencies = []

[project.optional-dependencies]

yaml = ["PyYAML>=6.0.3"]

cimporter = ["pycparser>=2.21"]

pycutil = [
    "uncompyle6",
    "decompyle3",
]

http = [
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "backoff>=2.2.0",
]

# Dev tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "build",
    "twine",
    "packaging",
]

# Docs
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

# All extras
all = [
    "PyYAML>=6.0.3",
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "backoff>=2.2.0",
    "pycparser>=2.21",
    "uncompyle6",
    "decompyle3",
]

[project.urls]
Homepage = "https://github.com/moamen-walid-pyputil/pyputil"
Documentation = "https://pyputil.readthedocs.io"
Repository = "https://github.com/moamen-walid-pyputil/pyputil.git"
Issues = "https://github.com/moamen-walid-pyputil/pyputil/issues"
Changelog = "https://github.com/moamen-walid-pyputil/pyputil/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = { find = { where = ["."], include = ["pyputil*"] } }
include-package-data = true

[tool.setuptools.package-data]
pyputil = ["py.typed", "**/*.pyi"]

# ---------- Formatting & Linting ----------

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/fixtures", "docs"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PTH",
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["pyputil"]

# ---------- Typing ----------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------- CLI ----------

[project.scripts]
pyputil-pypiutil = "pyputil.pypiutil:main"
pyputil-pycutil = "pyputil.pycutil:main"
pyputil-tree = "pyputil.tree.cli:main"
pyputil-pip = "pyputil.pip:main"

# ---------- Testing ----------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config --cov=pyputil"

# ---------- Coverage ----------

[tool.coverage.run]
branch = true
source = ["pyputil"]

[tool.coverage.report]
fail_under = 70

# ---------- Security ----------

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
severity = "medium"
confidence = "medium"